--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,26 +5,119 @@
     android:id="@+id/frameLayout_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E9E4E4"
-    tools:context=".LoginFragment" >
+    android:background="#CFFFDC"
+    tools:context=".LoginFragment">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:text="Login"
+        android:textColor="#454141"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="400dp"
-        android:layout_height="580dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="0dp"
+        android:layout_height="437dp"
+        android:layout_marginTop="132dp"
         android:background="#FFFFFF"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/logoLogin"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginLeft="150dp"
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="56dp"
+            android:layout_marginLeft="55dp"
             android:layout_marginTop="30dp"
-            android:src="@drawable/logo_login_register" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/user_login_logo"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/user_login_logo" />
+
+            <EditText
+                android:id="@+id/loginEmail"
+                android:layout_width="290dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Email"
+                android:inputType="text" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="56dp"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/password_login_logo"
+                android:layout_width="50dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/user_password_logo" />
+
+            <EditText
+                android:id="@+id/loginPassword"
+                android:layout_width="290dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="318dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="55dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/checkRememberMe"
+                android:layout_width="300dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="Ingat saya"
+                android:textColor="#AAA9AB"
+                android:textSize="16sp" />
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btnLogin"
+            android:layout_width="300dp"
+            android:layout_height="55dp"
+            android:layout_marginLeft="50dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#78DC82"
+            android:text="LOGIN" />
+
+        <TextView
+            android:id="@+id/btnLupaPassword"
+            android:layout_width="150dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="5dp"
+            android:text="Lupa password"
+            android:textAlignment="center"
+            android:textColor="#AAA9AB"
+            android:textSize="16sp" />
+
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
