Login done, next register

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,26 +8,34 @@
     android:background="#CFFFDC"
     tools:context=".LoginFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Login"
-        android:textColor="#454141"
-        android:textSize="34sp"
-        android:textStyle="bold"
+    <FrameLayout
+        android:layout_width="414dp"
+        android:layout_height="131dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="160dp"
+            android:layout_marginTop="45dp"
+            android:text="Login"
+            android:textAlignment="center"
+            android:textColor="#454141"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+    </FrameLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="437dp"
-        android:layout_marginTop="132dp"
+        android:layout_width="391dp"
+        android:layout_height="415dp"
+        android:layout_marginTop="144dp"
         android:background="#FFFFFF"
         android:orientation="vertical"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -55,11 +63,25 @@
                 android:inputType="text" />
         </LinearLayout>
 
+        <FrameLayout
+            android:layout_width="300dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="55dp">
+
+            <TextView
+                android:id="@+id/notificationErrorEmail"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#FF6057"
+                android:textSize="14sp"
+                android:visibility="gone" />
+        </FrameLayout>
+
         <LinearLayout
             android:layout_width="300dp"
             android:layout_height="56dp"
             android:layout_marginLeft="55dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -80,22 +102,35 @@
 
         </LinearLayout>
 
+        <FrameLayout
+            android:layout_width="300dp"
+            android:layout_height="38dp"
+            android:layout_marginLeft="55dp">
+
+            <TextView
+                android:id="@+id/notificationErrorPassword"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="#FF6057"
+                android:textSize="14sp"
+                android:visibility="gone" />
+        </FrameLayout>
+
         <LinearLayout
-            android:layout_width="318dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="55dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
             <CheckBox
-                android:id="@+id/checkRememberMe"
-                android:layout_width="300dp"
+                android:id="@+id/cekIngatSaya"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Ingat saya"
                 android:textColor="#AAA9AB"
                 android:textSize="16sp" />
-
         </LinearLayout>
 
         <Button
