--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,13 +5,14 @@
     android:id="@+id/frameLayout_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#9CB39E"
-    tools:context=".RegisterFragment" >
+    android:background="#CFFFDC"
+    tools:context=".RegisterFragment">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="56dp"
         android:text="Register"
         android:textColor="#454141"
         android:textSize="34sp"
@@ -20,4 +21,14 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="369dp"
+        android:layout_height="523dp"
+        android:layout_marginTop="116dp"
+        android:background="#FFFFFF"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
