--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -29,6 +29,7 @@
     </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="391dp"
         android:layout_height="415dp"
         android:layout_marginTop="144dp"
@@ -47,11 +48,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/user_login_logo"
+                android:id="@+id/email_login_logo"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:src="@drawable/user_login_logo" />
+                android:src="@drawable/email_logo" />
 
             <EditText
                 android:id="@+id/loginEmail"
@@ -69,7 +70,7 @@
             android:layout_marginLeft="55dp">
 
             <TextView
-                android:id="@+id/notificationErrorEmail"
+                android:id="@+id/notificationErrorEmailLogin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="#FF6057"
@@ -108,7 +109,7 @@
             android:layout_marginLeft="55dp">
 
             <TextView
-                android:id="@+id/notificationErrorPassword"
+                android:id="@+id/notificationErrorPasswordLogin"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:textColor="#FF6057"
@@ -143,7 +144,7 @@
             android:text="LOGIN" />
 
         <TextView
-            android:id="@+id/btnLupaPassword"
+            android:id="@+id/btnGoLupaPassword"
             android:layout_width="150dp"
             android:layout_height="20dp"
             android:layout_marginLeft="130dp"
@@ -154,5 +155,28 @@
             android:textSize="16sp" />
 
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="108dp"
+        android:text="Belum punya akun?"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/btnGoRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="84dp"
+        android:text="REGISTER"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
