Reset Pass, Profile Page

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -20,9 +20,11 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/profile"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginTop="36dp"
+        android:clickable="true"
         android:src="@drawable/user_login_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.041"
