--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -160,7 +160,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Password"
-                android:inputType="text" />
+                android:inputType="text|textPassword" />
         </LinearLayout>
 
         <FrameLayout
