--- a/app/src/main/res/navigation/navigation_main_menu.xml
+++ b/app/src/main/res/navigation/navigation_main_menu.xml
@@ -9,5 +9,14 @@
         android:id="@+id/mainFragment"
         android:name="com.istts.healthforyou.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/fragment_main" >
+        <action
+            android:id="@+id/action_mainFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.istts.healthforyou.ProfileFragment"
+        android:label="fragment_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
